src/BVH/BVH_DistanceField.hxx
@@ -16,7 +16,11 @@
 #ifndef _BVH_DistanceField_Header
 #define _BVH_DistanceField_Header
 
+#include <map>
+#include <set>
+
 #include <BVH_Geometry.hxx>
+#include <BVH_ImplicitFunction.hxx>
 
 template<class T, int N> class BVH_ParallelDistanceFieldBuilder;
 
@@ -26,7 +30,7 @@ template<class T, int N> class BVH_ParallelDistanceFieldBuilder;
 //! the structure. Distance fields are used as alternative surface representations
 //! (like polygons or NURBS).
 template<class T, int N>
-class BVH_DistanceField
+class BVH_DistanceField : public BVH_ImplicitFunction<T, N>
 {
   friend class BVH_ParallelDistanceFieldBuilder<T, N>;
 
@@ -43,8 +47,11 @@ public:
   //! Releases resources of 3D distance field.
   virtual ~BVH_DistanceField();
 
+  //! Calculates distance at the given point.
+  virtual T Calculate (const BVH_VecNt& thePoint);
+
   //! Builds 3D distance field from BVH geometry.
-  Standard_Boolean Build (BVH_Geometry<T, N>& theGeometry);
+  Standard_Boolean Build (BVH_Triangulation<T, N>* theMesh);
 
 public:
 
@@ -59,7 +66,11 @@ public:
             const Standard_Integer theY,
             const Standard_Integer theZ)
   {
-    return myVoxelData[theX + (theY + theZ * myDimensionY) * myDimensionX];
+    const Standard_Integer aX = Max (Min (myDimensionX - 1, theX), 0);
+    const Standard_Integer aY = Max (Min (myDimensionY - 1, theY), 0);
+    const Standard_Integer aZ = Max (Min (myDimensionZ - 1, theZ), 0);
+
+    return myVoxelData[aX + (aY + aZ * myDimensionY) * myDimensionX];
   }
 
   //! Returns distance value for the given voxel.
@@ -67,7 +78,11 @@ public:
            const Standard_Integer theY,
            const Standard_Integer theZ) const
   {
-    return myVoxelData[theX + (theY + theZ * myDimensionY) * myDimensionX];
+    const Standard_Integer aX = Max (Min (myDimensionX - 1, theX), 0);
+    const Standard_Integer aY = Max (Min (myDimensionY - 1, theY), 0);
+    const Standard_Integer aZ = Max (Min (myDimensionZ - 1, theZ), 0);
+
+    return myVoxelData[aX + (aY + aZ * myDimensionY) * myDimensionX];
   }
 
   //! Returns size of voxel grid in X dimension.
@@ -94,23 +109,59 @@ public:
     return myVoxelSize;
   }
 
-  //! Returns minimum corner of voxel grid.
-  const BVH_VecNt& CornerMin() const
-  {
-    return myCornerMin;
-  }
+public:
 
-  //! Returns maximum corner of voxel grid.
-  const BVH_VecNt& CornerMax() const
-  {
-    return myCornerMax;
-  }
+  //! Type of vertex mesh feature.
+  static const Standard_Integer VERT_ID = -2;
+
+  //! Type of face (triangle) mesh feature.
+  static const Standard_Integer FACE_ID = -1;
+
+  //! Feature (vertex, edge, face) of the mesh.
+  typedef std::pair<Standard_Integer,
+                    Standard_Integer> Feature;
 
 protected:
 
-  //! Performs building of distance field for the given Z slices.
-  void BuildSlices (BVH_Geometry<T, N>& theGeometry,
-    const Standard_Integer theStartZ, const Standard_Integer theFinalZ);
+  //! Compare functor for symmetrical pairs of integers.
+  struct SymmetricalPairComparator
+  {
+    bool operator() (const Feature& thePair1,
+                     const Feature& thePair2) const
+    {
+
+      const Standard_Integer aMin1 = std::min (thePair1.first, thePair1.second);
+      const Standard_Integer aMax1 = std::max (thePair1.first, thePair1.second);
+      const Standard_Integer aMin2 = std::min (thePair2.first, thePair2.second);
+      const Standard_Integer aMax2 = std::max (thePair2.first, thePair2.second);
+
+      return (aMin1 < aMin2) || (aMin1 == aMin2 && aMax1 < aMax2);
+    }
+
+    bool equal (const Feature& thePair1,
+                const Feature& thePair2) const
+    {
+      return std::min (thePair1.first, thePair1.second) == std::min (thePair2.first, thePair2.second)
+          && std::max (thePair1.first, thePair1.second) == std::max (thePair2.first, thePair2.second);
+    }
+  };
+
+  //! Associates normal with each mesh feature (vertex, edge, face).
+  std::map<Feature, BVH_VecNt, SymmetricalPairComparator> myFeatureNormalMap;
+
+  //! Computes the normal to the given triangle feature (vertex, edge, face).
+  BVH_VecNt normalToFeature (const Feature& theFeature);
+
+protected:
+
+  //! Builds 3D distance field for the given Z slices.
+  void buildSlices (Standard_Integer theStartZ, Standard_Integer theFinalZ);
+
+  //! Computes squared distance from the point to BVH triangulation.
+  T squareDistanceToMesh (const BVH_VecNt& thePnt, Standard_Boolean& theIsOutside);
+
+  //! Returns the closest feature and direction to it from the given point.
+  std::pair<BVH_VecNt, Feature> directToTrg (const BVH_VecNt& thePnt, const Standard_Integer theTrg);
 
 protected:
 
@@ -119,12 +170,6 @@ protected:
 
   //! Size of single voxel.
   BVH_VecNt myVoxelSize;
-
-  //! Minimum corner of voxel grid.
-  BVH_VecNt myCornerMin;
-
-  //! Maximum corner of voxel grid.
-  BVH_VecNt myCornerMax;
 
   //! Size of voxel grid in X dimension.
   Standard_Integer myDimensionX;
@@ -140,6 +185,9 @@ protected:
 
   //! Enables/disables signing of distance field.
   Standard_Boolean myComputeSign;
+
+  //! Triangulation to compute signed distance field.
+  BVH_Triangulation<T, N>* myMesh;
 
 };
 
